force-app/main/default/objects/Account/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <description>Lista de bancos.</description>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>184 - Banco Itaú BBA S.A.</fullName>
            </value>
            <value>
                <fullName>237 - Banco Bradesco S.A.</fullName>
            </value>
            <value>
                <fullName>748 - Banco Cooperativo Sicredi S.A.</fullName>
            </value>
            <value>
                <fullName>29 - Banco Itaú Consignado S.A.</fullName>
            </value>
            <value>
                <fullName>63 - Banco Bradescard S.A.</fullName>
            </value>
            <value>
                <fullName>1 - Banco do Brasil S.A.</fullName>
            </value>
            <value>
                <fullName>260 - NU Pagamentos S.A. – Nubank</fullName>
            </value>
            <value>
                <fullName>336 - Banco C6 S.A – C6 Bank</fullName>
            </value>
            <value>
                <fullName>33 - Banco Santander (Brasil) S.A.</fullName>
            </value>
            <value>
                <fullName>3 - Banco da Amazônia S.A.</fullName>
            </value>
            <value>
                <fullName>4 - Banco do Nordeste do Brasil S.A.</fullName>
            </value>
            <value>
                <fullName>7 - Banco Nacional de Desenvolvimento Econômico e Social – BNDES</fullName>
            </value>
            <value>
                <fullName>10 - CREDICOAMO CREDITO RURAL COOPERATIVA</fullName>
            </value>
            <value>
                <fullName>11 - CREDIT SUISSE HEDGING-GRIFFO CORRETORA DE VALORES S.A</fullName>
            </value>
            <value>
                <fullName>12 - Banco Inbursa S.A.</fullName>
            </value>
            <value>
                <fullName>14 - State Street Brasil S.A. – Banco Comercial</fullName>
            </value>
            <value>
                <fullName>15 - UBS Brasil Corretora de Câmbio, Títulos e Valores Mobiliários S.A.</fullName>
            </value>
            <value>
                <fullName>16 - COOPERATIVA DE CRÉDITO MÚTUO DOS DESPACHANTES DE TRÂNSITO DE SANTA CATARINA E RI</fullName>
            </value>
            <value>
                <fullName>17 - BNY Mellon Banco S.A.</fullName>
            </value>
            <value>
                <fullName>18 - Banco Tricury S.A.</fullName>
            </value>
            <value>
                <fullName>21 - BANESTES S.A. Banco do Estado do Espírito Santo</fullName>
            </value>
            <value>
                <fullName>24 - Banco BANDEPE S.A.</fullName>
            </value>
            <value>
                <fullName>25 - Banco Alfa S.A.</fullName>
            </value>
            <value>
                <fullName>36 - Banco Bradesco BBI S.A.</fullName>
            </value>
            <value>
                <fullName>37 - Banco do Estado do Pará S.A.</fullName>
            </value>
            <value>
                <fullName>40 - Banco Cargill S.A.</fullName>
            </value>
            <value>
                <fullName>41 - Banco do Estado do Rio Grande do Sul S.A.</fullName>
            </value>
            <value>
                <fullName>47 - Banco do Estado de Sergipe S.A.</fullName>
            </value>
            <value>
                <fullName>60 - Confidence Corretora de Câmbio S.A.</fullName>
            </value>
            <value>
                <fullName>62 - Hipercard Banco Múltiplo S.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>