force-app/main/default/objects/Account/fields/CpfFormatado__c.field-meta.xml
<CustomField>
    <fullName>CpfFormatado__c</fullName>
    <formula>IF(
    LEN(CPF__c) = 11,  
    LEFT(CPF__c, 3) &amp; &quot;.&quot; &amp; MID(CPF__c, 4, 3) &amp; &quot;.&quot; &amp; MID(CPF__c, 7, 3) &amp; &quot;-&quot; &amp; RIGHT(CPF__c, 2),
    CPF__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF Formatado</label>
    <type>Text</type>
</CustomField>