force-app/main/default/objects/Account/fields/CreciJuridico__c.field-meta.xml
<CustomField>
    <fullName>CreciJuridico__c</fullName>
    <label>Creci Jurídico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>