force-app/main/default/objects/Account/fields/Data_de_Casamento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Casamento__c</fullName>
    <label>Data de Casamento</label>
    <type>Date</type>
</CustomField>