force-app/main/default/objects/Account/fields/DDITelefone__c.field-meta.xml
<CustomField>
    <fullName>DDITelefone__c</fullName>
    <label>DDI Telefone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ListaPaisesDDI</valueSetName>
    </valueSet>
</CustomField>