force-app/main/default/objects/Account/fields/DetalhamentoOrigem__c.field-meta.xml
<CustomField>
    <fullName>DetalhamentoOrigem__c</fullName>
    <label>Detalhamento Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>