force-app/main/default/objects/Account/fields/EmailAlternativo__c.field-meta.xml
<CustomField>
    <fullName>EmailAlternativo__c</fullName>
    <label>Email Alternativo</label>
    <type>Email</type>
</CustomField>