force-app/main/default/objects/Account/fields/EmailPJ__c.field-meta.xml
<CustomField>
    <fullName>EmailPJ__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>