force-app/main/default/objects/Account/fields/EnderecoComercial__c.field-meta.xml
<CustomField>
    <fullName>EnderecoComercial__c</fullName>
    <label>Endereço comercial</label>
    <type>Address</type>
</CustomField>