force-app/main/default/objects/Account/fields/InscricaoEstadual__c.field-meta.xml
<CustomField>
    <fullName>InscricaoEstadual__c</fullName>
    <label>Inscrição estadual</label>
    <length>200</length>
    <type>Text</type>
</CustomField>