force-app/main/default/objects/Account/fields/Midia__c.field-meta.xml
<CustomField>
    <fullName>Midia__c</fullName>
    <label>Mídia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Midia</valueSetName>
    </valueSet>
</CustomField>