force-app/main/default/objects/Account/fields/Nacionalidade__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidade__c</fullName>
    <label>Nacionalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alemão(a)</fullName>
            </value>
            <value>
                <fullName>Argentino(a)</fullName>
            </value>
            <value>
                <fullName>Australiano(a)</fullName>
            </value>
            <value>
                <fullName>Austríaco(a)</fullName>
            </value>
            <value>
                <fullName>Belga(o)</fullName>
            </value>
            <value>
                <fullName>Bolíviano(a)</fullName>
            </value>
            <value>
                <fullName>Brasileiro(a)</fullName>
                <default>true</default>
                <label>Brasileiro(a)</label>
            </value>
            <value>
                <fullName>Búlgaro(a)</fullName>
            </value>
            <value>
                <fullName>Cambojano(a)</fullName>
            </value>
            <value>
                <fullName>Canadense</fullName>
            </value>
            <value>
                <fullName>Chadiano(a)</fullName>
            </value>
            <value>
                <fullName>Checo(a)</fullName>
            </value>
            <value>
                <fullName>Chinês(a)</fullName>
            </value>
            <value>
                <fullName>Colombiano(a)</fullName>
            </value>
            <value>
                <fullName>Coreano(a)</fullName>
            </value>
            <value>
                <fullName>Croata(o)</fullName>
            </value>
            <value>
                <fullName>Cubano(a)</fullName>
            </value>
            <value>
                <fullName>Dinamarquês(a)</fullName>
            </value>
            <value>
                <fullName>Equatoriano(a)</fullName>
            </value>
            <value>
                <fullName>Esloveno(a)</fullName>
            </value>
            <value>
                <fullName>Espanhol(a)</fullName>
            </value>
            <value>
                <fullName>Finlandês(a)</fullName>
            </value>
            <value>
                <fullName>Francês(a)</fullName>
            </value>
            <value>
                <fullName>Grego(a)</fullName>
            </value>
            <value>
                <fullName>Guatemalteco(a)</fullName>
            </value>
            <value>
                <fullName>Haitiano(a)</fullName>
            </value>
            <value>
                <fullName>Holandês(a)</fullName>
            </value>
            <value>
                <fullName>Hondurenho(a)</fullName>
            </value>
            <value>
                <fullName>Húngaro(a)</fullName>
            </value>
            <value>
                <fullName>Indiano(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>