force-app/main/default/objects/Account/fields/NDocumento__c.field-meta.xml
<CustomField>
    <fullName>NDocumento__c</fullName>
    <inlineHelpText>Referente a qualquer documento de identificação que o lead estrangeiro possa ter, como RNE (Registro Nacional de Estrangeiros) ou DNI (identificação na Argentina)</inlineHelpText>
    <label>Nº de Documento</label>
    <length>14</length>
    <type>Text</type>
</CustomField>