force-app/main/default/objects/Account/fields/NIRE__c.field-meta.xml
<CustomField>
    <fullName>NIRE__c</fullName>
    <inlineHelpText>Número de Identificação do Registro de Empresas</inlineHelpText>
    <label>NIRE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>