force-app/main/default/objects/Account/fields/Nome_da_Mae__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Mae__c</fullName>
    <description>Deve ser preenchido com o nome da mãe do usuário.</description>
    <label>Nome da Mãe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>