force-app/main/default/objects/Account/fields/Nome_do_Pai__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Pai__c</fullName>
    <description>Deve ser preenchido com o nome do pai do usuário.</description>
    <label>Nome do Pai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>