force-app/main/default/objects/Account/fields/NomeFantasia__c.field-meta.xml
<CustomField>
    <fullName>NomeFantasia__c</fullName>
    <description>Refere-se ao nome fantasia da empresa</description>
    <inlineHelpText>Descrever o nome fantasia da empresa</inlineHelpText>
    <label>Nome Fantasia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>