force-app/main/default/objects/Account/fields/NumeroAgenciaBancaria__c.field-meta.xml
<CustomField>
    <fullName>NumeroAgenciaBancaria__c</fullName>
    <label>Número Agência Bancária</label>
    <length>10</length>
    <type>Text</type>
</CustomField>