force-app/main/default/objects/Account/fields/NumeroDoDocumento__c.field-meta.xml
<CustomField>
    <fullName>NumeroDoDocumento__c</fullName>
    <label>Número do Documento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>