force-app/main/default/objects/Account/fields/OrgaoEmissor__c.field-meta.xml
<CustomField>
    <fullName>OrgaoEmissor__c</fullName>
    <inlineHelpText>Órgão emissor é a instituição responsável por emitir um documento.</inlineHelpText>
    <label>Orgão Emissor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNIG - Conselho Nacional de Imigração</fullName>
            </value>
            <value>
                <fullName>CRECI - Conselho Regional de Corretores de Imóveis</fullName>
            </value>
            <value>
                <fullName>CRESS - Conselho Regional de Serviço Socia</fullName>
            </value>
            <value>
                <fullName>Detran</fullName>
            </value>
            <value>
                <fullName>MTE - Ministério do Trabalho e Emprego</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Polícia Federal</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>