force-app/main/default/objects/Account/fields/OrigemDoLead__c.field-meta.xml
<CustomField>
    <fullName>OrigemDoLead__c</fullName>
    <label>Origem do Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corretores</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Plantão</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>Imobiliárias</fullName>
            </value>
            <value>
                <fullName>Imprensa</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>