force-app/main/default/objects/Account/fields/PIXCNPJ__c.field-meta.xml
<CustomField>
    <fullName>PIXCNPJ__c</fullName>
    <label>PIX CNPJ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>