force-app/main/default/objects/Account/fields/PotencialDeInvestimento__c.field-meta.xml
<CustomField>
    <fullName>PotencialDeInvestimento__c</fullName>
    <label>Potencial de Investimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PotencialInvestimento</valueSetName>
    </valueSet>
</CustomField>