force-app/main/default/objects/Account/fields/Prefer_ncia_de_Horario_de_Contato__c.field-meta.xml
<CustomField>
    <fullName>Prefer_ncia_de_Horario_de_Contato__c</fullName>
    <label>Preferência de Horário de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PreferenciaHorarioContato</valueSetName>
    </valueSet>
</CustomField>