force-app/main/default/objects/Account/fields/PreferenciaDeContato__c.field-meta.xml
<CustomField>
    <fullName>PreferenciaDeContato__c</fullName>
    <label>Preferência de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PreferenciaContato</valueSetName>
    </valueSet>
</CustomField>