force-app/main/default/objects/Account/fields/PrimeiraCompra__c.field-meta.xml
<CustomField>
    <fullName>PrimeiraCompra__c</fullName>
    <label>Primeira compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>