force-app/main/default/objects/Account/fields/RegimeDeBens__c.field-meta.xml
<CustomField>
    <fullName>RegimeDeBens__c</fullName>
    <label>Regime de bens</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comunhão parcial de Bens</fullName>
            </value>
            <value>
                <fullName>Comunhão Universal de Bens</fullName>
            </value>
            <value>
                <fullName>Separação convecional de Bens</fullName>
            </value>
            <value>
                <fullName>Separação obrigatória de Bens</fullName>
            </value>
            <value>
                <fullName>Participação final nos Aquestos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>