force-app/main/default/objects/Account/fields/TipoContaBancaria__c.field-meta.xml
<CustomField>
    <fullName>TipoContaBancaria__c</fullName>
    <label>Tipo da Conta Bancária</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conta Corrente</fullName>
            </value>
            <value>
                <fullName>Conta Poupança</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>