force-app/main/default/objects/Account/fields/Uf__c.field-meta.xml
<CustomField>
    <fullName>Uf__c</fullName>
    <label>UF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>