force-app/main/default/objects/Account/fields/WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp__c</fullName>
    <label>WhatsApp</label>
    <type>Phone</type>
</CustomField>