force-app/main/default/objects/Account/recordTypes/Imobiliaria.recordType-meta.xml
<RecordType>
    <fullName>Imobiliaria</fullName>
    <active>true</active>
    <label>Imobiliária</label>
</RecordType>