force-app/main/default/objects/Account/recordTypes/PessoaJuridicaPJ.recordType-meta.xml
<RecordType>
    <fullName>PessoaJuridicaPJ</fullName>
    <active>true</active>
    <label>Pessoa Jurídica (PJ)</label>
</RecordType>