force-app/main/default/objects/Account/validationRules/BairroNumeroObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>BairroNumeroObrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Endereco__City__s )),
        ISBLANK(Bairro__c),
        ISBLANK(Numero__c)
)</errorConditionFormula>
    <errorMessage>Preencha os campos Bairro e Número!</errorMessage>
</ValidationRule>