force-app/main/default/objects/Account/validationRules/ContaSemCpfCnpj.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaSemCpfCnpj</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
AND(
RecordType.DeveloperName == &apos;Pessoa Física (PF)&apos;,
ISBLANK(CPF__c)
),
AND(
RecordType.DeveloperName == &apos;Pessoa Jurídica (PJ)&apos;,
ISBLANK(CNPJ__c)
)
)
)</errorConditionFormula>
    <errorMessage>Preencha o campo CPF/CNPJ</errorMessage>
</ValidationRule>